[metadata]
name = yorkshire
version = attr: yorkshire.__about__.__version__
description = Yorkshire is your friend who checks requirements files for a possible dependency confusion.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/DataDog/yorkshire
download_url = https://github.com/DataDog/yorkshire
keywords = packaging, pip, dependencies, dependency-management, utilities, dependency-confusion, guarddog
license = Apache-2.0
license_files = LICENSE
author = Fridolin Pokorny
author_email = fridolin.pokorny@datadoghq.com
maintainer = Fridolin Pokorny
maintainer_email = fridolin.pokorny@datadoghq.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython


[options]
packages = find:
install_requires =
    attrs
    click
    daiquiri
    pip
    pip-requirements-parser
    requests
    rich-click
    tomli
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    yorkshire = yorkshire.cli:cli
