[metadata]
name = oo
version = attr: yorkshire.__about__.__version__
description = Yorkshire is your friend who checks requirements files for a possible dependency confusion.
classifiers =
    Private :: Do Not Upload
    Development Status :: 1 - Planning

[options]
packages = find:
dependency_links = https://my.allowed.index.org/simple
install_requires =
    requests
python_requires = >=3.9
