[tool.poetry]
name = "foo"
version = "1.0.0"
description = "Datadog package"
authors = ["Datadog <packages@datadoghq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^2"

[[tool.poetry.source]]
name = "private_repo"
url = "https://my.allowed.index.org/simple"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
